// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DbStore Create Test: Successfully removed 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "id": 0,
  "state": {
    "result": {
      "myString": "myText",
      "myNum": 420,
      "id": 0
    }
  },
  "loading": false
}
</div>
`;

exports[`DbStore Create Test: While removing 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "id": 0,
  "loading": true
}
</div>
`;

exports[`DbStore Create Test: after login 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "loading": false
}
</div>
`;

exports[`DbStore Create Test: before login 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "loading": false
}
</div>
`;

exports[`DbStore Create Test: error for not exisiting anymore 1`] = `[NotFound: No record found for id '0']`;

exports[`DbStore Create Test: fetch existing resource 1`] = `
Object {
  "id": 0,
  "myNum": 420,
  "myString": "myText",
}
`;

exports[`DbStore Create Test: remove render 1`] = `
<div
  class="mymock"
>
  {
  "form": {
    "model": "formModel",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {
              "required": {
                "type": 2
              }
            }
          }
        ]
      },
      {
        "fields": [
          {
            "mapTo": "myNum",
            "type": 3,
            "validate": {}
          }
        ]
      }
    ]
  },
  "id": 0,
  "loading": false
}
</div>
`;

exports[`DbStore Create Test: remove result 1`] = `
Object {
  "result": Object {
    "id": 0,
    "myNum": 420,
    "myString": "myText",
  },
}
`;
